[Mac][Material Design] Adjust tabstrip Incognito, non-vibrant bg color.

R=avi@chromium.org
BUG=595502

Review-Url: https://codereview.chromium.org/1992193003
Cr-Commit-Position: refs/heads/master@{#395089}