chrome/browser/ui/cocoa/tabs/tab_strip_view.mm
@@ -133,6 +133,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
           !themeProvider->HasCustomColor(ThemeProperties::COLOR_FRAME)) {
         theColor = themeProvider->GetNSColor(
             ThemeProperties::COLOR_FRAME_VIBRANCY_OVERLAY);
+      } else if (!supportsVibrancy && themeProvider->InIncognitoMode()) {
+        theColor = [NSColor colorWithSRGBRed:20 / 255.
+                                       green:22 / 255.
+                                        blue:24 / 255.
+                                       alpha:1];
       } else {
         theColor = themeProvider->GetNSColor(ThemeProperties::COLOR_FRAME);
       }
